--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
           <div class="section-heading">
             <h4>Check What <em>The Clients Say</em> About Our App Dev</h4>
             <img src="assets/images/heading-line-dec.png" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eismod tempor incididunt ut labore et dolore magna.</p>
+<p>Developers from around the world trust us to simplify app publishing on Google Play. With successful launches across multiple industries, our clients highlight the transparency, reliability, and dedicated support that set us apart.</p>
           </div>
         </div>
         <div class="col-lg-12">
