--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-               <img src="assets/images/Logo.png" alt="DevBoost Logo">
+               <img src="assets/images/Logo.png">
            </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
