--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-               <img src="assets/images/Logo.png">
+               <img src="assets/images/logo.png">
            </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
@@ -716,7 +716,7 @@
           <div class="footer-widget">
             <h4>About Our Company</h4>
             <div class="logo">
-               <img src="assets/images/Logo.png" alt="">
+               <img src="assets/images/logo.png" alt="">
              </div>
             <p>We help developers and startups publish their apps on Google Play without barriers. 
 By providing secure access to our verified console, we make the process simple, transparent, 
