--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
               <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="#services">Services</a></li>
               <li class="scroll-to-section"><a href="#about">About</a></li>
-              <li class="scroll-to-section"><a href="#pricing">Pricing</a></li>
-              <li class="scroll-to-section"><a href="#newsletter">Newsletter</a></li>
+<!--               <li class="scroll-to-section"><a href="#pricing">Pricing</a></li>
+ -->              <li class="scroll-to-section"><a href="#newsletter">Newsletter</a></li>
               <li><div class="gradient-button"><a id="modal_trigger" href="#modal"><i class="fa fa-sign-in-alt"></i> Contact Us Now</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
