--- a/index.html
+++ b/index.html
@@ -60,8 +60,13 @@
               <li class="scroll-to-section"><a href="#about">About</a></li>
 <!--               <li class="scroll-to-section"><a href="#pricing">Pricing</a></li>
  -->              <li class="scroll-to-section"><a href="#newsletter">Newsletter</a></li>
-              <li><div class="gradient-button"><a id="modal_trigger" href="#modal"><i class="fa fa-sign-in-alt"></i> Contact Us Now</a></div></li> 
-            </ul>        
+<li>
+  <div class="gradient-button">
+    <a id="modal_trigger" href="https://forms.gle/Dn4JNEmCbc1M7Bdf8" target="_blank">
+      <i class="fa fa-sign-in-alt"></i> Contact Us Now
+    </a>
+  </div>
+</li>            </ul>        
             <a class='menu-trigger'>
                 <span>Menu</span>
             </a>
