--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@
     Focus on building your app, we’ll handle the publishing process.
 </p>
                   </div>
-               <!--    <div class="col-lg-12">
-                    <div class="white-button first-button scroll-to-section">
+                   <div class="col-lg-12">
+                 <!--    <div class="white-button first-button scroll-to-section">
                       <a href="#contact">Free Quote <i class="fab fa-apple"></i></a>
-                    </div>
+                    </div> -->
                     <div class="white-button scroll-to-section">
-                      <a href="#contact">Free Quote <i class="fab fa-google-play"></i></a>
+                      <a href="https://play.google.com/store/apps/developer?id=Skandersoummer&hl=pt_BR&gl=br">Play Store <i class="fab fa-google-play"></i></a>
                     </div>
-                  </div> -->
+                  </div> 
                 </div>
               </div>
             </div>
