--- a/index.html
+++ b/index.html
@@ -258,6 +258,26 @@
             </div>
           </div>
         </div>
+        <!--  <div class="col-lg-3">
+          <div class="service-item third-service">
+            <div class="icon"></div>
+            <h4>APP Development</h4>
+      <p>We design high-performance mobile apps for iOS and Android to enhance customer engagement and digital presence.</p>
+            <div class="text-button">
+              <a href="#">Read More <i class="fa fa-arrow-right"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="service-item fourth-service">
+            <div class="icon"></div>
+            <h4>Web Development </h4>
+      <p>We build secure, scalable, and user-friendly web applications tailored to your business needs.</p>
+            <div class="text-button">
+              <a href="#">Read More <i class="fa fa-arrow-right"></i></a>
+            </div>
+          </div>
+        </div> -->
       </div>
     </div>
   </div>
@@ -299,6 +319,20 @@
           <p>Expert tips on monetization, compliance, and maximizing your app’s success.</p>
               </div>
             </div>
+
+  <div class="col-lg-6">
+              <div class="box-item">
+                <h4><a href="#">App Development</a></h4>
+          <p>We design high-performance mobile apps to enhance customer engagement and digital presence.</p>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="box-item">
+                <h4><a href="#">Web Development </a></h4>
+          <p>We build secure, scalable, and user-friendly web applications tailored to your business needs.</p>
+              </div>
+            </div>
+
             <div class="col-lg-12">
         <p>
           We believe every developer deserves a chance to publish their app and reach millions of users. 
